# CS-course

./: .gitignore  README.md  README.txt  debug.txt
C++/dummies/: .gitignore  CMakeLists.txt
C++/dummies/bierne_straustrup/: CMakeLists.txt
C++/dummies/bierne_straustrup/allocators/: CMakeLists.txt  info.txt  leak.c
C++/dummies/bierne_straustrup/animals/: animals.cpp
C++/dummies/bierne_straustrup/exception/: CMakeLists.txt  exception.cpp
C++/dummies/bierne_straustrup/init_copy_test/: base_with_pure_virtual_implemented.cpp  init_copy_test.cpp  virtual_inheritance.cpp
C++/dummies/bierne_straustrup/initializer_list/: initializer_list.cpp  initializer_list.hpp
C++/dummies/bierne_straustrup/intraspection_meta_functions/: enable_if_like_concept.cpp  intraspection.cpp
C++/dummies/bierne_straustrup/lambda/: lambda.cpp
C++/dummies/bierne_straustrup/mstring/: CMakeLists.txt  c_split.cpp  mstring.cpp  mstring.hpp
C++/dummies/bierne_straustrup/object_constructions_and_allocations/: CMakeLists.txt
C++/dummies/bierne_straustrup/pointers_copy/: poiters_copy.cpp
C++/dummies/bierne_straustrup/pointers_to_massives/: pointers_to_massives.cpp  pointers_to_massives.hpp
C++/dummies/bierne_straustrup/standard_explore/: CMakeLists.txt
C++/dummies/bierne_straustrup/static_use_cases/: CMakeLists.txt
C++/dummies/bierne_straustrup/structured_bindings/: structured_bindings.cpp
C++/dummies/bierne_straustrup/tcp_server/: build.txt  sockets.cpp  sockets.hpp
C++/dummies/containers/: README.txt
C++/dummies/converter/: converter.cpp
C++/dummies/main_utils/: CMakeLists.txt  main_func_utils.cpp  main_func_utils.hpp
C++/dummies/multithreading/: CMakeLists.txt  README.txt  signals.txt  unix_process_info.txt
C++/dummies/multithreading/big_data_sort/: CMakeLists.txt  big_data_sort.cpp  dataset_12656_4.txt
C++/dummies/multithreading/events_queue/: CMakeLists.txt  EventQueue.cpp  EventQueue.hpp
C++/dummies/multithreading/fork_test/: CMakeLists.txt  fork_test.cpp
C++/dummies/multithreading/lock_with_file/: lock_with_file.cpp
C++/dummies/multithreading/map_reduce/: CMakeLists.txt  map_reduce.cpp
C++/dummies/multithreading/pipes/: who_wc.cpp
C++/dummies/multithreading/posix_ipc/: CMakeLists.txt  info.txt
C++/dummies/multithreading/posix_ipc_pipe/: CMakeLists.txt  recv.cpp  send.cpp
C++/dummies/multithreading/posix_semaphore/: CMakeLists.txt  sem_open.cpp
C++/dummies/multithreading/queues/: CMakeLists.txt  trt.txt
C++/dummies/multithreading/shared_memory/: shared_memory.cpp
C++/dummies/multithreading/signal_ignoring_test/: CMakeLists.txt  signal_ignoring_test.cpp
C++/dummies/multithreading/threads/: CMakeLists.txt  concurent_access2.cpp  thread_save_queue.cpp  threads.cpp
C++/dummies/multithreading/unix_IPC/: CMakeLists.txt  pipe.info
C++/dummies/old_cpp/: CMakeLists.txt  char_ptr.cpp
C++/dummies/old_cpp/big_little_endian_digits_repr/: big_little_endian_digits_repr.cpp
C++/dummies/old_cpp/bit_acces_c_style/: bit_acces_c_style.cpp
C++/dummies/old_cpp/embedding_resources/: CMakeLists.txt  resource_storage.cpp.template
C++/dummies/old_cpp/erase_if_idiom/: erase_if_idiom.cpp  info.txt
C++/dummies/old_cpp/erase_remove_idiom/: CMakeLists.txt  erase_remove_idiom.cpp  info.txt
C++/dummies/problems/: CMakeLists.txt
C++/dummies/problems/about_math/: CMakeLists.txt
C++/dummies/problems/add_two_num/: CMakeLists.txt  add_two_num.cpp
C++/dummies/problems/add_two_num_2_list/: CMakeLists.txt  add_two_num_2_list.cpp  add_two_num_2_list_shared.cpp
C++/dummies/problems/anagram_groups/: CMakeLists.txt  anagram_groups.cpp  info.txt
C++/dummies/problems/anagrams_str/: CMakeLists.txt  anagrams_str.cpp  info.txt
C++/dummies/problems/average_of_levels_in_binary_three/: CMakeLists.txt  solution.cpp
C++/dummies/problems/backspace_string_compare/: CMakeLists.txt  solution.cpp
C++/dummies/problems/best_time_to_buy_and_sell_stock/: CMakeLists.txt  solution.cpp
C++/dummies/problems/biggest_prefix/: CMakeLists.txt  biggest_prefix.cpp
C++/dummies/problems/biggest_substr/: CMakeLists.txt  biggest_substr_uniq_chars.cpp
C++/dummies/problems/binary_search/: CMakeLists.txt  solution.cpp
C++/dummies/problems/binary_tree_paths/: CMakeLists.txt  solution.cpp
C++/dummies/problems/bit_accessor/: CMakeLists.txt  bit_accessor.cpp
C++/dummies/problems/calc_integral/: calc_integral.cpp
C++/dummies/problems/climbing_stairs/: CMakeLists.txt  solution.cpp
C++/dummies/problems/coin_change/: CMakeLists.txt  solution.cpp
C++/dummies/problems/combinations/: CMakeLists.txt  solution.cpp
C++/dummies/problems/combinations_sum/: CMakeLists.txt  solution.cpp
C++/dummies/problems/combinations_sum_2/: CMakeLists.txt  solution.cpp
C++/dummies/problems/combinations_sum_3/: CMakeLists.txt  solution.cpp
C++/dummies/problems/combinations_sum_4/: CMakeLists.txt  solution.cpp
C++/dummies/problems/contain_most_water/: CMakeLists.txt  contain_most_water.cpp
C++/dummies/problems/converter/: CMakeLists.txt  test.cpp
C++/dummies/problems/counting_bits/: CMakeLists.txt  solution.cpp
C++/dummies/problems/decode_ways/: CMakeLists.txt  solution.cpp
C++/dummies/problems/deepest_node_bin_tree/: CMakeLists.txt  deepest_node.cpp
C++/dummies/problems/del_middle_node/: CMakeLists.txt  del_middle_node.cpp
C++/dummies/problems/diameter_of_binary_tree/: CMakeLists.txt  solution.cpp
C++/dummies/problems/disappeared_numbers_in_array/: CMakeLists.txt  solution.cpp
C++/dummies/problems/duplicates_in_str/: CMakeLists.txt  duplicates_in_str.cpp
C++/dummies/problems/find_all_duplicates_in_an_array/: CMakeLists.txt  solution.cpp
C++/dummies/problems/find_smallest_letter_greater_than_target/: CMakeLists.txt  solution.cpp
C++/dummies/problems/find_target/: CMakeLists.txt  find_target.cpp  find_target_2.cpp
C++/dummies/problems/find_the_duplicate_number/: CMakeLists.txt  solution.cpp
C++/protobuf-cpp/: CMakeLists.txt  README.md
C++/protobuf-cpp/cmake/: GitUtils.cmake  Packing.cmake
C++/protobuf-cpp/proto/: CMakeLists.txt  message.proto
(+426 files in other folders)
