
add_executable(pointers_to_massives pointers_to_massives/pointers_to_massives.cpp)
add_executable(initialize_list initializer_list/initializer_list.cpp)
add_executable(pointers_copy pointers_copy/poiters_copy.cpp)
add_executable(init_copy_test init_copy_test/init_copy_test.cpp)
add_executable(animals animals/animals.cpp)
add_executable(mstring mstring/mstring.cpp mstring/mstring.hpp)
