add_executable(char_ptr char_ptr.cpp)
add_executable(erase_if_idiom erase_if_idiom/erase_if_idiom.cpp)
add_executable(bit_acces_c_style bit_acces_c_style/bit_acces_c_style.cpp)
add_executable(big_little_endian_digits_repr big_little_endian_digits_repr/big_little_endian_digits_repr.cpp)

add_subdirectory(embedding_resources)
