
#A
add_subdirectory(about_math)
add_subdirectory(anagrams_str)
add_subdirectory(anagram_groups)
add_subdirectory(add_two_num)
add_subdirectory(add_two_num_2_list)
add_subdirectory(average_of_levels_in_binary_three)

#B
add_subdirectory(backspace_string_compare)
add_subdirectory(best_time_to_buy_and_sell_stock)
add_subdirectory(biggest_prefix)
add_subdirectory(biggest_substr)
add_subdirectory(binary_search)
add_subdirectory(binary_tree_paths)
add_subdirectory(bit_accessor)

#C
add_subdirectory(converter)
add_subdirectory(counting_bits)
add_subdirectory(contain_most_water)
add_subdirectory(climbing_stairs)

#D
add_subdirectory(diameter_of_binary_tree)
add_subdirectory(duplicates_in_str)
add_subdirectory(del_middle_node)
add_subdirectory(deepest_node_bin_tree)
add_subdirectory(disappeared_numbers_in_array)

#F
add_subdirectory(fizz_buzz)
add_subdirectory(find_target)
add_subdirectory(find_the_duplicate_number)
add_subdirectory(find_all_duplicates_in_an_array)
add_subdirectory(find_smallest_letter_greater_than_target)

#I
add_subdirectory(int_to_roman)
add_subdirectory(int_to_bin)
add_subdirectory(invert_binary_tree)
add_subdirectory(is_subsequence)

#K
add_subdirectory(k_weakest_rows_matrix)

#L
add_subdirectory(ladder_to_a)
add_subdirectory(lambda_cout)
add_subdirectory(list_node_cycle)
add_subdirectory(list_node_merge)
add_subdirectory(list_node_middle)
add_subdirectory(list_node_reverse)
add_subdirectory(list_node_palindrome)
add_subdirectory(list_node_remove_item)
add_subdirectory(list_node_remove_duplicates_from_sorted)
add_subdirectory(longest_consecutive_sequence)

#M
add_subdirectory(maximum_average_subarray)
add_subdirectory(majority_element)
add_subdirectory(missing_number)
add_subdirectory(max_wealth)
add_subdirectory(mid_of_arrays)
add_subdirectory(move_zeroes)
add_subdirectory(my_atoi)
add_subdirectory(merge_two_binary_trees)
add_subdirectory(merge_two_sorted_list)
add_subdirectory(minimum_depth_of_binary_tree)
add_subdirectory(maximum_depth_of_binary_tree)

#N
add_subdirectory(negative_in_matrix)

#O
add_subdirectory(one_D_array_to_two_D_array)

#P
add_subdirectory(parenthesis)
add_subdirectory(palindromic_substr)
add_subdirectory(path_sum)
add_subdirectory(phone_number_digits)
add_subdirectory(polynom_derivative)
add_subdirectory(product_of_array_except_self)

#R
add_subdirectory(rotate_matrix)
add_subdirectory(romans_to_int)
add_subdirectory(range_sum_query)
add_subdirectory(reduce_to_zero)
add_subdirectory(ransome_note)
add_subdirectory(remove_nth_elem_node_list)
add_subdirectory(reverse_int)

#S
add_subdirectory(same_tree)
add_subdirectory(single_number)
add_subdirectory(serializable_list_node)
add_subdirectory(set_matrix_zeroes)
add_subdirectory(spiral_matrix)
add_subdirectory(squares_of_a_sorted_array)
add_subdirectory(subtree_of_another_tree)

#T
add_subdirectory(three_sum)
add_subdirectory(two_sum)

#V
add_subdirectory(vector_filter_duplicates)
add_subdirectory(valid_brackets)

#W
add_subdirectory(word_search_in_matrix)

#Z
