
# Possible read layout of object in written file with vim :%!xxd read mode

add_subdirectory(alignas_test)
add_subdirectory(arrays_with_structs_layout)
add_subdirectory(layout_with_virtual_inheritance_and_virtual_methods)
add_subdirectory(layout_with_virtual_methods)
add_subdirectory(layout_with_virtual_methods_multiple_inheritance)
add_subdirectory(structs_layout)
