
# Эта программа записывает дамп структуры с виртуальными методам в
# файл, который создается рядом с расположением исполняемого файла.
# Можно увидеть, как происходит выравнивание, сколько раз в памяти указан vptr
# и одинаковые ли адреса в раскладке у базы и производного

add_executable(layout_with_virtual_methods source.cpp)
