
# 0000000: 6100 0000 1400 0000 6200 0000 0000 0000   a.......b.......
# 00000010: 0000 0000 0000 0000 0000 0000 6100 0000  ............a...
# 00000020: 1400 0000 6200 0000 0000 0000 0000 0000  ....b...........
# 00000030: 0000 0000 0000 0000 6162 0000 1400 0000  ........ab......
# 00000040: 0a                                       .

# Эта программа записывает структуры с различной раскладкой в бинарном режиме
# файл, который создается рядом с расположением исполняемого файла.
# Можно проследить, как происходит выравнивание в зависимости от порядка объявления полей

add_executable(structs_layout source.cpp)
